<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serviceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <RadioGroup
        android:layout_marginStart="16dp"
        android:checkedButton="@id/amazing_rb"
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <RadioButton
            android:id="@+id/amazing_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/good_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2"
            style="@style/RadioButton"/>
        <RadioButton
            android:id="@+id/ok_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb3"
            style="@style/RadioButton"/>
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/roundUpTip"
        android:checked="true"
        android:text="@string/sw"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calc"/>

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/tv3"
        style="@style/textView" />
</LinearLayout>